--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
         </div>
 
         <div class="mb-2">
-          <label for="Jota Pos">Jota Pos</label>
+          <label for="Jota Pos">Kode Pos</label>
           <div>
             <input class="w80" type="text" id="eleDetail7">
           </div>
