--- a/index.html
+++ b/index.html
@@ -60,7 +60,8 @@
             <div class="currency-box">
               <span class="currency-symbol">Rp</span>
             </div>
-            <input type="text" id="eleForm3" onclick="formatter('eleForm3', 'validationMessage1')" onchange="hargaFn()" disabled>
+            <input type="text" id="eleForm3" onclick="formatter('eleForm3', 'validationMessage1')" onchange="hargaFn()"
+              disabled>
           </div>
           <span id="validationMessage1">Silahkan input nominal yang sesuai</span>
         </div>
@@ -150,7 +151,7 @@
         </div>
 
         <div class="mb-2">
-          <label for="Jota Pos">Kode Pos</label>
+          <label for="Kode Pos">Kode Pos</label>
           <div>
             <input class="w80" type="text" id="eleDetail7">
           </div>
@@ -525,7 +526,8 @@
         <div class="calculationAmount"></div>
         <p>Perhitungan hanya bersifat simulasi, dapat berubah sesuai regulasi BAF. Ajukan aplikasi pembiayaan dan kami
           akan menghubungi Anda.</p>
-        <button type="submit" style="margin-top: 10px; color: #002f5f; font-weight: bold;" onclick="showDetailForm()">Ajukan
+        <button type="submit" style="margin-top: 10px; color: #002f5f; font-weight: bold;"
+          onclick="showDetailForm()">Ajukan
           Sekarang</button>
 
       </div>
