--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
     <div class="container calculation hide" id="submit_form">
       <div style="text-align: center">
         <h2>Estimasi Cicilan Bulanan Anda</h2>
-        <div class="calculationAmount">Rp. 2,110,000/ Bulan</div>
+        <div class="calculationAmount" id="calcAmount">Rp. 2,110,000/ Bulan</div>
         <p>Perhitungan hanya bersifat simulasi, dapat berubah sesuai regulasi BAF. Ajukan aplikasi pembiayaan dan kami
           akan menghubungi Anda.</p>
         <button type="submit" style="margin-top: 10px; color: #002f5f; font-weight: bold;"
