Make form dynamic

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body>
 
-  <div class="main-container">
+  <div class="main-container2">
 
     <div class="cards" id="cards">
       <div class="card_1" onclick="nextStep1()">
@@ -33,8 +33,8 @@
       </div>
     </div>
 
-    <div class="ele_form hide" id="ele_form">
-      <form action="#" class="form" id="myForm">
+    <div class="container hide" id="ele_form">
+      <form action="#" class="form-2" id="myForm">
 
         <div class="mb-2">
           <label for="Pilih Tipe Barang">Pilih Tipe Barang</label>
@@ -105,8 +105,8 @@
       </div>
     </div>
 
-    <div class="ele_form hide" id="ele_form_details">
-      <form action="#" class="form">
+    <div class="container hide" id="ele_form_details">
+      <form action="#" class="form-2">
 
         <div class="mb-2">
           <label for="Nama Lengkap">Nama Lengkap</label>
@@ -359,8 +359,6 @@
           lanjut. </p>
       </div>
     </div>
-
-
 
 
   </div>
