--- a/index.html
+++ b/index.html
@@ -84,6 +84,10 @@
           </div>
         </div>
 
+        <input type="hidden" id="eleForm6">
+        <input type="hidden" id="eleForm7">
+
+
         <div class="submit_div">
           <button type="submit" id="submit_elektronik" class="submit" onclick="myFunction('elektronik')" disabled>Hitung
             Cicilan Anda</button>
