--- a/index.html
+++ b/index.html
@@ -84,9 +84,9 @@
           </div>
         </div>
 
-        <input type="hidden" id="eleForm6">
-        <input type="hidden" id="eleForm7">
-
+        <input type="hidden" id="eleForm6" value="">
+        <input type="hidden" id="eleForm7" value="">
+        <input type="hidden" id="eleForm8" value="">
 
         <div class="submit_div">
           <button type="submit" id="submit_elektronik" class="submit" onclick="myFunction('elektronik')" disabled>Hitung
@@ -353,21 +353,6 @@
 
       </form>
     </div>
-
-    <div class="container calculation bg-white hide" id="success_popup">
-      <div style="text-align: center">
-        <img style="width: 50%;" src="./assets/image/svg/baf.png" alt="">
-        <h2>Terima Kasih</h2>
-
-        <p>Kami telah menerima pengajuan pendanaan Mobil Daihatsu Anda.Tim kami akan menghubungi Anda untuk proses lebih
-          lanjut. </p>
-      </div>
-    </div>
-
-
-  </div>
-
-  <div class="main-container2">
 
     <div class="container hide" id="dana_syariah">
       <form action="#" class="form-2" id="myForm">
