--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <div class="main-container2">
 
     <div class="cards" id="cards">
-      <div class="card_1" onclick="nextStep1()">
+      <div class="card_1" onclick="nextStep1('Elektronik & Gadget Furnitur')">
         <img src="./assets/image/svg/new-mp-home.svg" alt="">
       </div>
       <div class="card_2" onclick="nextStep2()">
