--- a/index.html
+++ b/index.html
@@ -20,16 +20,16 @@
 
     <div class="cards" id="cards">
       <div class="card_1" onclick="nextStep1('Elektronik & Gadget Furnitur')">
-        <img src="./assets/image/svg/new-mp-home.svg" alt="">
+        <img class="image" src="./assets/image/svg/new-mp-home.svg" alt="">
       </div>
       <div class="card_2" onclick="nextStep2()">
-        <img src="./assets/image/svg/new-syana-home.svg" alt="">
+        <img class="image" src="./assets/image/svg/new-syana-home.svg" alt="">
       </div>
       <div class="card_3" onclick="nextStep3()">
-        <img src="./assets/image/svg/new-car-home.svg" alt="">
+        <img class="image" src="./assets/image/svg/new-car-home.svg" alt="">
       </div>
       <div class="card_4" onclick="nextStep4()">
-        <img src="./assets/image/svg/new-nmc-home.svg" alt="">
+        <img class="image" src="./assets/image/svg/new-nmc-home.svg" alt="">
       </div>
     </div>
 
