--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
   <div class="main-container2">
 
-    <div class="cards" id="cards">
+    <div class="cards " id="cards">
       <div class="card_1" onclick="nextStep1('Elektronik & Gadget Furnitur')">
         <img class="image" src="./assets/image/svg/new-mp-home.svg" alt="">
       </div>
@@ -357,6 +357,15 @@
 
         <p>Kami telah menerima pengajuan pendanaan Mobil Daihatsu Anda.Tim kami akan menghubungi Anda untuk proses lebih
           lanjut. </p>
+      </div>
+    </div>
+
+    <div class="container calculation bg-white hide" id="failure_popup">
+      <div style="text-align: center">
+        <img style="width: 50%;" src="./assets/image/svg/icons8-cross-mark-48.png" alt="">
+        <h2>oh no</h2>
+
+        <p>Maaf saat ini sedang ada kendala, Silakan coba beberapa saat lagi.</p>
       </div>
     </div>
 
