--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@
       </form>
     </div>
 
-    <div class="container popup bg-white hide" id="success_popup">
+    <div class="container calculation bg-white hide" id="success_popup">
       <div style="text-align: center">
         <img style="width: 50%;" src="./assets/image/svg/baf.png" alt="">
         <h2>Terima Kasih</h2>
@@ -360,7 +360,7 @@
       </div>
     </div>
 
-    <div class="container popup bg-white hide" id="failure_popup">
+    <div class="container calculation bg-white hide" id="failure_popup">
       <div style="text-align: center">
         <img style="width: 50%;" src="./assets/image/svg/icons8-cross-mark-48.png" alt="">
         <h2>oh no</h2>
