formatting hitung cicilan anda page

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         <div class="calculationAmount"><p id="calcAmount"></p></div>
         <p>Perhitungan hanya bersifat simulasi, dapat berubah sesuai regulasi BAF. Ajukan aplikasi pembiayaan dan kami
           akan menghubungi Anda.</p>
-        <button type="submit" style="margin-top: 10px; color: #002f5f; font-weight: bold;"
+        <button type="submit" style="margin-top: 10px; color: #002f5f; font-weight: bold; padding: 8px; border-radius: 10px;"
           onclick="showDetailForm()">Ajukan
           Sekarang</button>
 
@@ -533,7 +533,7 @@
         <div class="calculationAmount"></div>
         <p>Perhitungan hanya bersifat simulasi, dapat berubah sesuai regulasi BAF. Ajukan aplikasi pembiayaan dan kami
           akan menghubungi Anda.</p>
-        <button type="submit" style="margin-top: 10px; color: #002f5f; font-weight: bold;"
+        <button type="submit" style="margin-top: 10px; color: #002f5f; font-weight: bold; padding: 8px; border-radius: 10px;"
           onclick="showDetailForm()">Ajukan
           Sekarang</button>
 
