--- a/index.html
+++ b/index.html
@@ -110,50 +110,57 @@
 
         <div class="mb-2">
           <label for="Nama Lengkap">Nama Lengkap</label>
-          <div>
-            <input class="w80" type="text" id="eleDetail1">
+          <div id="eleDetail1">
+            <input class="w80" type="text">
+            <span style="display: none; color: red;">Silahkan masukkan nama terlebih dahulu</span>
           </div>
         </div>
 
         <div class="mb-2">
           <label for="Email">Email</label>
-          <div>
-            <input class="w80" type="email" id="eleDetail2">
+          <div id="eleDetail2">
+            <input class="w80" type="email">
+            <span style="display: none; color: red;">Silahkan masukkan email terlebih dahulu</span>
           </div>
         </div>
 
         <div class="mb-2">
           <label for="Tanggal Lahir">Tanggal Lahir</label>
-          <div>
-            <input class="w80" type="date" id="eleDetail3" name="Tanggal Lahir">
+          <div  id="eleDetail3">
+            <input class="w80" type="date" name="Tanggal Lahir">
+            <span style="display: none; color: red;">Silahkan masukan tanggal lahir dengan minimal umur 17 tahun</span>
           </div>
         </div>
 
         <div class="mb-2">
           <label for="Nomor Handphone">Nomor Handphone</label>
-          <div>
-            <input class="w80" type="number" id="eleDetail4">
+          <div id="eleDetail4">
+            <input class="w80" type="number">
+            <span style="display: none; color: red;">Silahkan input nomor telepon yang valid</span>
           </div>
         </div>
 
         <div class="mb-2">
           <label for="Alamat">Alamat</label>
-          <div class="">
-            <textarea class="w80" id="eleDetail5" name="eleDetail5" rows="4" cols="30"></textarea>
+          <div id="eleDetail5">
+            <textarea class="w80" name="eleDetail5" rows="4" cols="30"></textarea>
+            <span style="display: none; color: red;">Silahkan masukkan alamat terlebih dahulu</span>
           </div>
         </div>
 
         <div class="mb-2">
           <label for="Kota Tinggal">Kota Tinggal</label>
-          <div>
-            <input class="w80" type="text" id="eleDetail6">
+          <div id="eleDetail6">
+            <input class="w80" type="text">
+            <span style="display: none; color: red;">Silahkan masukkan kota terlebih dahulu</span>
           </div>
         </div>
 
         <div class="mb-2">
           <label for="Kode Pos">Kode Pos</label>
-          <div>
-            <input class="w80" type="text" id="eleDetail7">
+          <div id="eleDetail7">
+            <input class="w80" type="text">
+            <span style="display: none; color: red;">Silahkan tentukan tahun pembuatan motor terlebih dahulu</span>
           </div>
         </div>
 
