--- a/index.html
+++ b/index.html
@@ -172,14 +172,14 @@
         </div>
 
         <div class="mb-2">
-          <label for="kode Promo">Kode Promo</label>
+          <label for="kode Promo">Kode Promo</label><span style="font-size: small;"> (*jika ada)</span>
           <div>
             <input class="w80" type="text" id="eleDetail9">
           </div>
         </div>
 
         <div class="mb-2">
-          <label for="Kode Referensi">Kode Referensi</label>
+          <label for="Kode Referensi">Kode Referensi</label><span style="font-size: small;"> (*jika ada)</span>
           <div>
             <input class="w80" type="text" id="eleDetail10">
           </div>
