fixing onchange function on ios

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <div class="mb-2">
           <label for="Pilih Tipe Barang">Pilih Tipe Barang</label>
           <div class="">
-            <select class="form-control" style="width: 100%;" id="eleForm1" onchange="optionSelection()" onblur="optionSelection()>
+            <select class="form-control" style="width: 100%;" id="eleForm1" onchange="optionSelection()" onblur="optionSelection()">
               <option value="" disabled selected>Silahkan Pilih</option>
             </select>
           </div>
