fixing onchange function on ios

--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
             <div class="currency-box">
               <span class="currency-symbol">Rp</span>
             </div>
-            <input type="text" id="eleForm3" onclick="formatter('eleForm3', 'validationMessage1')" onchange="hargaFn()" onblur="hargaFn()"
-              disabled>
+            <input type="text" id="eleForm3" onclick="formatter('eleForm3', 'validationMessage1')" onchange="hargaFn()" oninput="hargaFn()"
+              >
           </div>
           <span id="validationMessage1">Silahkan input nominal yang sesuai</span>
         </div>
