--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
               <span class="currency-symbol">Rp</span>
             </div>
             <input type="text" id="eleForm3" onclick="formatter('eleForm3', 'validationMessage1')" onchange="hargaFn()" oninput="hargaFn()"
-              >
+              disabled>
           </div>
           <span id="validationMessage1">Silahkan input nominal yang sesuai</span>
         </div>
