fixing onchange() on ios

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <div class="currency-box">
               <span class="currency-symbol">Rp</span>
             </div>
-            <input type="text" id="eleForm3" placeholder=" Min. 1.000.0000" onclick="formatter('eleForm3', 'validationMessage1')" onchange="hargaFn()"
+            <input type="text" id="eleForm3" placeholder=" Min. 1.000.0000" onclick="formatter('eleForm3', 'validationMessage1')" onchange="hargaFn()" oninput="hargaFn()"
               disabled>
           </div>
           <span id="validationMessage1">Silahkan input nominal yang sesuai</span>
