fix elektronik event

--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
             <select class="form-control" style="width: 100%;" id="eleForm1" onchange="optionSelection()" onblur="optionSelection()">
               <option value="" disabled selected>Silahkan Pilih</option>
             </select>
+            <input type="hidden" name="risktypeId" id="risktypeId" value="">
           </div>
         </div>
 
